--- a/src/Services/basket/Basket.API/appsettings.json
+++ b/src/Services/basket/Basket.API/appsettings.json
@@ -2,10 +2,14 @@
   "CacheSettings": {
     "ConnectionString": "localhost:6379"
   },
+  "GrpcSettings": {
+    "DiscountUrl": "http://localhost:5003"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
