trying to fix order api with postgresql

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     image: postgres
 
   orderdb:
-    image: mcr.microsoft.com/mssql/server
+    image: postgres
 
   pgadmin:
     image: dpage/pgadmin4
