--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -30,11 +30,12 @@ services:
   orderdb:
     container_name: orderdb
     environment:
-      - SA_PASSWORD=SwN12345678
-      - ACCEPT_EULA=Y
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin1234
+      - POSTGRES_DB=OrderDb
     restart: always
     ports:
-      - "1433:1433"
+      - "5433:5432"
 
   pgadmin:
     container_name: pgadmin
@@ -103,7 +104,7 @@ services:
     container_name: ordering.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"  
+      - "ConnectionStrings:DefaultConnection=Server=orderdb;Port=5433;Database=OrderDb;User Id=admin;Password=admin1234;"  
     depends_on:
       - orderdb
     ports:
