--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -37,6 +37,13 @@ services:
     ports:
       - "5433:5432"
 
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
   pgadmin:
     container_name: pgadmin
     environment:
